examples/invalid/double_underscore.jasn
// Double underscores in numbers are forbidden
{
  bad_number: 1__000
}
